[package]
name = "attimo"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"
include = [
    "/benches",
    "/examples",
    "/src",
    "/*.toml",
]

[dependencies]
anyhow = "1.0"
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
rayon = "1.7"
fast-float = "0.2"
thread_local = "1.1"
rustfft = "6.1"
indicatif = "0.16"
statrs = "0.16"
argh = "0.1"
log = "0.4"
slog = "2.7"
slog-json = "2.4"
slog-scope = "4.4"
slog-async = "2.7"
flate2 = "1"
xxhash-rust = { version = "0.8.5", features = ["xxh32"] }
pprof = {version = "0.12.1", features = ["cpp", "prost", "prost-codec"]}

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
chrono = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
# Optimize tests, otherwise they take very long to run.
# This is different than running tests in relase mode,
# which also disables debug assertions.
opt-level = 2

