[package]
name = "attimo"
version = "0.3.1"
authors = ["Matteo Ceccarello <matteo.ceccarello@unipd.it>"]
edition = "2021"
include = [
    "/benches",
    "/examples",
    "/src",
    "/*.toml",
]

[dependencies]
anyhow = "1.0"
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
rayon = "1.7"
fast-float = "0.2"
thread_local = "1.1"
rustfft = "6.1"
indicatif = "0.16"
statrs = "0.16"
argh = "0.1"
log = {version = "0.4", features = ["kv_unstable"] }
env_logger = "0.10.1"
# slog = "2.7"
# slog-json = "2.4"
# slog-scope = "4.4"
# slog-async = "2.7"
flate2 = "1"
pprof = {version = "0.13", features = ["cpp", "prost", "prost-codec"]}
regex = "1.10.2"
sysinfo = "0.30.5"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
chrono = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[profile.test]
# Optimize tests, otherwise they take very long to run.
# This is different than running tests in relase mode,
# which also disables debug assertions.
opt-level = 2

