[package]
name = "pyattimo"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyattimo"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.19", features = [
  "extension-module",
  "anyhow",
  "abi3",
  "abi3-py37",
] }
attimo = { path = ".." }
pyo3-log = "0.9.0"
