[build-system]
requires = ["maturin>=1.3,<1.4"]
build-backend = "maturin"

[project]
name = "pyattimo"
description = "A fast and scalable algorithm for time series motif mining."
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

